# indabax_zimbabwe_hackathon

./: .gitignore  README.md  Starter_Notebook.ipynb  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
catboost_info/tmp/: cat_feature_index.26be6b46-24abef4b-b19227cd-b4d306e8.tmp  cat_feature_index.48d1e174-612b4c22-29756830-c2ce69dd.tmp
configs/: colab_t4.yaml  default.yaml  fast.yaml  full.yaml
data/splits/: folds.parquet
logs/training/: lgbm_v2_ordinal.json  lgbm_v3_target_woe.json  xgb_v2_ordinal.json  xgb_v3_target_woe.json
notebooks/: 01_train_predict_submit.ipynb  02_local_debug_improve.ipynb  03_competition_push.ipynb  04_catboost_deep.ipynb
results/: leaderboard.md
src/: __init__.py  __main__.py  cli.py  config.py
src/data/: dates.py  loader.py  splits.py
src/ensemble/: optuna_blend.py  rank_avg.py  stacking.py
src/evaluation/: metrics.py  shap_explain.py
src/features/: adversarial.py  base.py  pipeline.py
src/models/: base.py  boosted.py  classical.py  deep_mlp.py  embedder.py  tabnet_model.py
src/pipelines/: __main__.py  ensemble.py  prepare_data.py  run_full.py  train_models.py  tune.py
src/submission/: writer.py
src/training/: calibration.py  (+2 more)
submissions/: sub_best_single.csv  sub_ensemble.csv  sub_final.csv  sub_optuna_blend.csv  submission_local_debug.csv
tests/: conftest.py  test_pipeline_integration.py  test_reproducibility.py  test_splits.py  test_submission_format.py
(+19 files in other folders)
